fixed titles on mobile devices

--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@ h4 {
   .section-title {
     margin: 30px 20px;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
 
@@ -703,6 +703,7 @@ h4 {
     margin: 0;
     padding: 0;
     text-align: center;
+    font-size: 1.5rem;
   }
 
   .skills-list li {
@@ -732,7 +733,7 @@ h4 {
 
   .projects-list {
     margin: 0 50px;
-    font-size: 2.5rem;
+    font-size: 2rem;
     padding: 0;
     text-align: left;
   }
